[package]
name = "cosmic-settings"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
rust-version = "1.65.0"

[dependencies]
apply = "0.3.0"
async-channel = "1.8.0"
bytecheck = "0.6.11"
color-eyre = "0.6.2"
cosmic-settings-page = { path = "../page" }
cosmic-settings-system = { path = "../pages/system" }
cosmic-settings-time = { path = "../pages/time" }
derive_setters = "0.1.6"
dirs = "5.0.1"
generator = "0.7.4"
i18n-embed-fl = "0.6.7"
libcosmic = {workspace = true}
once_cell = "1.17.2"
regex = "1.8.3"
rkyv = { version = "0.7.42", features = ["validation"]}
rust-embed = "6.6.1"
slotmap = "1.0.6"
tokio = "1.28.2"
downcast-rs = "1.2.0"
cosmic-panel-config = { git = "https://github.com/pop-os/cosmic-panel" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}

[dependencies.i18n-embed]
version = "0.13.9"
features = ["fluent-system", "desktop-requester"]

[profile.release]
opt-level = "s"
overflow-checks = true
lto = "thin"
incremental = false
