[package]
name = "cosmic-settings"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
rust-version = "1.65.0"

[dependencies]
apply = "0.3.0"
async-channel = "1.8.0"
color-eyre = "0.6.2"
cosmic-settings-desktop = { path = "../pages/desktop" }
cosmic-settings-page = { path = "../page" }
cosmic-settings-system = { path = "../pages/system" }
cosmic-settings-time = { path = "../pages/time" }
derivative = "2.2.0"
derive_setters = "0.1.6"
dirs = "5.0.1"
generator = "0.7.4"
i18n-embed-fl = "0.6.7"
itertools = "0.11.0"
libcosmic = {workspace = true}
once_cell = "1.17.2"
regex = "1.8.3"
rust-embed = "6.6.1"
slotmap = "1.0.6"
tokio = "1.28.2"
downcast-rs = "1.2.0"
cosmic-comp-config = { workspace = true }
# TODO: migrate this dependency to the pages/desktop crate.
cosmic-panel-config = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
log = "0.4"
url = "2.3.1"
freedesktop-desktop-entry = "0.5.0"
notify = "6.0.0"
anyhow = "1.0"
image = "0.24.6"
serde = { version = "1.0.180", features = ["derive"] }
ashpd = { version = "0.6.2", default-features = false }
ron = "0.8"
static_init = "1.0.3"
clap = {version = "4.4.8", features = ["derive"] }

[dependencies.i18n-embed]
version = "0.13.9"
features = ["fluent-system", "desktop-requester"]
