[package]
name = "cosmic-settings"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
rust-version = "1.65.0"

[dependencies]
apply = "0.3.0"
async-channel = "2.1.1"
color-eyre = "0.6.2"
cosmic-randr-shell = { git = "https://github.com/pop-os/cosmic-randr", rev = "c35172c" }
cosmic-settings-desktop = { path = "../pages/desktop" }
cosmic-settings-page = { path = "../page" }
cosmic-settings-system = { path = "../pages/system" }
cosmic-settings-time = { path = "../pages/time" }
derivative = "2.2.0"
derive_setters = "0.1.6"
dirs = "5.0.1"
generator = "0.7.5"
i18n-embed-fl = "0.7.0"
itertools = "0.12.0"
libcosmic = {workspace = true}
once_cell = "1.19.0"
regex = "1.10.2"
rust-embed = "8.2.0"
slotmap = "1.0.7"
tokio = "1.35.1"
downcast-rs = "1.2.0"
cosmic-comp-config = { workspace = true }
# TODO: migrate this dependency to the pages/desktop crate.
cosmic-panel-config = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
log = "0.4"
url = "2.5.0"
freedesktop-desktop-entry = "0.5.0"
notify = "6.1.1"
anyhow = "1.0"
image = "0.24.8"
serde = { version = "1.0.195", features = ["derive"] }
ashpd = { version = "0.6.8", default-features = false }
ron = "0.8"
static_init = "1.0.3"
clap = {version = "4.4.18", features = ["derive"] }
itoa = "1.0.10"
futures = { package = "futures-lite", version = "2.2.0" }

[dependencies.i18n-embed]
version = "0.14.1"
features = ["fluent-system", "desktop-requester"]

[features]
test = []
