[package]
name = "cosmic-settings-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmic-bg-config = { workspace = true }
cosmic-config = { workspace = true }
dirs = "5.0.1"
freedesktop-icons = "0.2.4"
futures-lite = "1.13.0"
image = "0.24.7"
infer = "0.15.0"
rayon = "1.8.0"
sctk = { workspace = true }
tokio = { version = "1.35.1", features = ["sync"] }
tracing = "0.1.40"
wayland-client = "0.31.1"
