[package]
name = "cosmic-settings-sound"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
futures = "0.3.32"
intmap = "3.1.3"
tokio = { workspace = true, features = ["time"] }
tracing = "0.1.44"

[dependencies.cosmic-settings-audio-client]
git = "https://github.com/pop-os/cosmic-settings-daemon"
features = ["codec"]
