[package]
name = "cosmic-settings-system"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.4"
const_format = "0.2.32"
concat-in-place = "1.1.0"
sysinfo = "0.30.5"
memchr = "2.7.1"

[dependencies.bumpalo]
version = "3.14.0"
features = ["collections"]
