[package]
name = "cosmic-settings-system"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.6"
const_format = "0.2.34"
concat-in-place = "1.1.0"
sysinfo = "0.36.1"
memchr = "2.7.5"

[dependencies.bumpalo]
version = "3.19.0"
features = ["collections"]
