[package]
name = "cosmic-settings-wallpaper"
version = "1.0.7"
edition = "2024"
rust-version.workspace = true

[dependencies]
cosmic-bg-config = { workspace = true }
cosmic-randr-shell = { workspace = true }
dirs = "6.0.0"
eyre = "0.6.12"
fast_image_resize = { version = "6", features = [
    "image",
] }
futures-lite = "2.6.1"
futures-util = "0.3.32"
image.workspace = true
infer = "0.19.0"
jxl-oxide = { version = "0.12.5", features = ["image"] }
tokio = { workspace = true, features = ["sync"] }
tracing = "0.1.44"
walkdir = "=2.5.0"
