[package]
name = "cosmic-settings-accessibility-subscription"
version = "1.0.2"
edition = "2024"
license = "MPL-2.0"
rust-version.workspace = true
publish = true

[dependencies]
cosmic-dbus-a11y = { git = "https://github.com/pop-os/dbus-settings-bindings" }
futures = "0.3.31"
iced_futures = { git = "https://github.com/pop-os/libcosmic" }
tokio = { version = "1.49.0", features = ["sync", "time"] }
tracing = "0.1.44"
zbus = "5.12"
