[package]
name = "cosmic-settings-airplane-mode-subscription"
version = "1.0.2"
edition = "2024"
license = "MPL-2.0"
rust-version.workspace = true
publish = true

[dependencies]
futures = "0.3.31"
iced_futures = { git = "https://github.com/pop-os/libcosmic" }
log = "0.4.29"
rustix = "1.1.3"
tokio = "1.49.0"
