[package]
name = "cosmic-settings-bluetooth-subscription"
version = "1.0.7"
edition = "2024"
license = "MPL-2.0"
rust-version.workspace = true
publish = true

[dependencies]
bluez-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
futures = "0.3.32"
iced_futures = { git = "https://github.com/pop-os/libcosmic" }
tokio = "1.49.0"
tracing = "0.1.44"
zbus = "5.13.2"

[patch.'https://github.com/pop-os/libcosmic']
iced_futures = { git = "https://github.com/pop-os/libcosmic//", branch = "iced-rebase" }
libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "iced-rebase" }
cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "iced-rebase" }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic//", branch = "iced-rebase" }
